--- a/src/pages/jinja2/pages/about.html
+++ b/src/pages/jinja2/pages/about.html
@@ -1,6 +1,6 @@
-{% extends 'base/_base.jinja2' %}
+{% extends 'base/_base.html' %}
 
-{% import 'base/macro/common.jinja2' as common_macro %}
+{% import 'base/macro/common.html' as common_macro %}
 
 {% block main_content %}
     {% set heading = _('Микола Радчук') %}
