--- a/src/base/jinja2/base/_base.html
+++ b/src/base/jinja2/base/_base.html
@@ -1,16 +1,36 @@
-{% import 'base/macro/_base.jinja2' as _base_macro %}
+{% import 'base/macro/_base.html' as _base_macro %}
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        {# TODO: replace title, description, author tags #}
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{% block document_description %}{% endblock %}">
+        <meta name="description" content="{% block document_description -%}
+            {%- if page -%}
+                {%- if page.search_description -%}
+                    {{ page.search_description }}
+                {%- elif page.title -%}
+                    {{ page.title }}
+                {%- endif -%}
+            {%- endif -%}
+        {%- endblock %}">
         <meta name="author" content="{% block document_author %}Mikalai Radchuk{% endblock %}">
 
-        <title>{% block document_title %}{{ settings.SITE_TITLE }}{% endblock %}</title>
+        <title>
+            {%- block document_title -%}
+                {%- if page -%}
+                    {%- if page.seo_title -%}
+                        {{ page.seo_title }}
+                    {%- elif page.title -%}
+                        {{ page.title }}
+                    {%- else -%}
+                        {{ settings.SITE_TITLE }}
+                    {%- endif -%}
+                {%- endif -%}
+                {%- endblock -%}{%- block document_title_suffix -%}
+            {%- endblock -%}
+        </title>
 
         {% block document_css %}
             <link href="{{ static('base/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -19,6 +39,7 @@
 {#            <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>#}
 {#            <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>#}
             <link href="{{ static('css/styles.min.css') }}" rel="stylesheet">
+            <link href="{{ static('base/css/code_styles.css') }}" rel="stylesheet">
             <!--[if lt IE 9]>
                 <script src="{{ static('base/js/html5shiv.min.js') }}"></script>
                 <script src="{{ static('base/js/respond.min.js') }}"></script>
@@ -27,6 +48,9 @@
     </head>
 
     <body>
+        {{ wagtailuserbar() }}
+
+
         {% block navigation %}
             {{ _base_macro.navigation() }}
         {% endblock %}
