--- a/src/base/jinja2/base/macro/_base.html
+++ b/src/base/jinja2/base/macro/_base.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     {% if settings.SOCIAL_MEDIA_URLS %}
                         <ul class="list-inline text-center">
-                            {% for media_key, media_url in settings.SOCIAL_MEDIA_URLS.iteritems() %}
+                            {% for media_key, media_url in settings.SOCIAL_MEDIA_URLS.items() %}
                                 <li>
                                     <a href="{{ media_url }}">
                                         <span class="fa-stack fa-lg">
