Add about page specific CSS to page output

--- a/src/content/about/jinja2/about/about_page.html
+++ b/src/content/about/jinja2/about/about_page.html
@@ -2,6 +2,11 @@
 
 {% import 'base/macro/common.html' as common_macro %}
 
+{% block document_css %}
+    {{ super() }}
+    <link href="{{ static('about/css/styles.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block main_content %}
     {{ common_macro.heading(
         heading=page.title,
